# MediaServer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Basic.qml  CMakeLists.txt  MediaServer.pro  README.md  basic-b2qt.qml  editfile.cpp  editfile.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.qml  qml.qrc  sambaConfig.qml  sambaconfig.cpp  sambaconfig.h  start.cpp
Alarm/: Alarm.pro  AlarmView.cpp  AlarmView.h  CMakeLists.txt  Quotes.h  alarmview.cpp  alarmview.h  main.cpp  main.qml  qml.qrc  quotes.cpp  quotes.qml
Alarm/ViewModel/: AlarmView.cpp
Alarm/resources/: Quotes.qml  main.qml  qml.qrc
Alarm/src/: AlarmView.cpp  AlarmView.h  Quotes.cpp  alarmview.cpp  alarmview.h  main.cpp  quotes.cpp  quotes.h
MediaServerApp/: CMakeLists.txt  MediaServerApp.pro  ScreenSaverManager.cpp  ScreenSaverManager.h  alarm.cpp  alarm.h  alarm.qml  alarmConfig.qml  bluetoothctl.cpp  bluetoothctl.h  dlnaConfig.qml  editalarmconfigfile.cpp  editalarmconfigfile.h  editdlnaconfigfile.cpp  editdlnaconfigfile.h  editfile.cpp  editfile.h  editftpconfigfile.cpp  editftpconfigfile.h  editheadersconfigfile.cpp  editheadersconfigfile.h  editmpdconfigfile.cpp  editmpdconfigfile.h  editsambaconfigfile.cpp  editsambaconfigfile.h  editscreensaverconfigfile.cpp  editscreensaverconfigfile.h  editwificonfigfile.cpp  editwificonfigfile.h  ftpConfig.qml  main.qml  managementfatdrive.cpp  managementfatdrive.h  managementntfsdrive.cpp  managementntfsdrive.h  managementofexternaldevices.cpp  managementofexternaldevices.h  massStorage.qml  menu.qml  mpdConfig.qml  (+13 more)
MediaServerApp/ViewModel/: AlarmConfig.cpp  AlarmConfig.h  FtpConfig.cpp  FtpConfig.h  MainWindow.cpp  MainWindow.h  MassStorage.cpp  MassStorage.h  MultimediaConfig.cpp  MultimediaConfig.h  NapiManager.cpp  NapiManager.h  SambaConfig.cpp  SambaConfig.h  SambaConfigExternalDevice1.cpp  ScreenSaver.cpp  ScreenSaver.h  SettingsPackages.cpp  SettingsScreenSaver.cpp  SettingsScreenSaver.h  SettingsStatus.h  alarmconfig.cpp  alarmconfig.h  alarmview.cpp  alarmview.h  dlnaconfig.cpp  dlnaconfig.h  ftpconfig.cpp  ftpconfig.h  mainwindow.cpp  mainwindow.h  massstorage.cpp  massstorage.h  mpdconfig.cpp  mpdconfig.h  multimediaconfig.cpp  multimediaconfig.h  napimanager.cpp  napimanager.h  quotes.cpp  (+20 more)
MediaServerApp/ViewModel/MainWindow/: BluetoothAgent.cpp  BluetoothAgent.h  MainWindow.cpp  MainWindow.h
MediaServerApp/ViewModel/Samba/: SambaConfig.cpp  SambaConfig.h  SambaConfigGlobal.cpp  SambaConfigLocal.cpp
MediaServerApp/ViewModel/ScreenSaver/: ScreenSaver.cpp  ScreenSaverManager.cpp  ScreenSaverManager.h
MediaServerApp/ViewModel/Settings/: SettingsPackages.cpp  SettingsPackages.h  SettingsScreenSaver.cpp
MediaServerApp/resources/: AlarmConfig.qml  FtpConfig.qml  MassStorage.qml  MultimediaConfig.qml  Napi.qml  Quotes.qml  SambaConfig.qml  ScreenSaver.qml  ScreenSaverManager.qml  Settings.qml  alarmConfig.qml  ftpConfig.qml  main.qml  multimediaConfig.qml  napi.qml  qml.qrc  quotes.qml  sambaConfig.qml  screensaver.qml  settings.qml
MediaServerApp/src/: Bluetoothctl.cpp  ScreenSaverManager.h  bluetoothctl.cpp  screensavermanager.cpp  screensavermanager.h  start.cpp
MediaServerApp/src/ViewModel/: AlarmConfig.cpp  AlarmConfig.h  FtpConfig.cpp  FtpConfig.h  MassStorage.h  MultimediaConfig.cpp  MultimediaConfig.h  NapiManager.h  Quotes.cpp  SambaConfig.cpp  SambaConfig.h  SambaConfigExternalDevice2.cpp  SambaConfigExternalDevice3.cpp  ScreenSaver.cpp  ScreenSaver.h  SettingsPackages.cpp  SettingsPackages.h  SettingsScreenSaver.h  SettingsStatus.cpp  SettingsStatus.h  alarmconfig.cpp  alarmconfig.h  ftpconfig.cpp  ftpconfig.h  mainwindow.cpp  mainwindow.h  massstorage.cpp  massstorage.h  multimediaconfig.cpp  multimediaconfig.h  napimanager.cpp  napimanager.h  quotes.cpp  quotes.h  sambaconfig.cpp  sambaconfig.h  sambaconfigexternaldevice1.cpp  (+12 more)
MediaServerBluetooth/: CMakeLists.txt  MediaServerBluetooth.pro  main.cpp
MediaServerLib/: CMakeLists.txt  ManagementOfExternalDevices.cpp  MediaServerLib.pro  editalarmconfigfile.cpp  editheadersconfigfile.cpp  editscreensaverconfigfile.cpp  editscreensaverconfigfile.h  editwificonfigfile.cpp  editwificonfigfile.h  managementofexternaldevices.cpp
MediaServerLib/ConfigFile/: AlarmConfigFile.cpp  AlarmConfigFile.h  ConfigFile.cpp  ConfigFile.h  DlnaConfigFile.cpp  DlnaConfigFile.h  FtpConfigFile.cpp  FtpConfigFile.h  IConfigFile.h  IFileManager.h  MpdConfigFile.cpp  MpdConfigFile.h  ScreenSaverConfigFile.cpp  ScreenSaverConfigFile.h  WifiConfigFile.cpp  WifiConfigFile.h
MediaServerLib/Utils/: VectorData.cpp
MediaServerLib/ViewModel/: SettingsIpAddress.cpp  SettingsIpAddress.h  SettingsWifi.cpp  SettingsWifi.h  settings.cpp  settings.h  settingsipaddress.cpp
MediaServerLib/src/: EditAlarmConfigFile.cpp  EditAlarmConfigFile.h  EditDlnaConfigFile.cpp  EditFtpConfigFile.cpp  EditMpdConfigFile.cpp  EditMpdConfigFile.h  EditScreenSaverConfigFile.cpp  EditWifiConfigFile.cpp  IFileManager.h  MpdConfigFile.cpp  MpdFileManager.cpp  MpdFileManager.h  VectorData.cpp  VectorData.h  editalarmconfigfile.cpp  editalarmconfigfile.h  editftpconfigfile.cpp  editheadersconfigfile.cpp  editmpdconfigfile.cpp  editscreensaverconfigfile.cpp  editscreensaverconfigfile.h  managementofexternaldevices.h  mpdconfigfile.cpp  mpdconfigfile.h
MediaServerStartup/: CMakeLists.txt  MediaServerStartup.pro  main.qml  mainwindow.cpp  start.cpp
MediaServerStartup/ViewModel/: MainWindow.h
MediaServerStartup/resources/: main.qml
MediaServerStartup/src/: MainWindow.cpp  mainwindow.cpp  start.cpp
UnitTests/: AlarmConfigFileTest.cpp  CMakeLists.txt  DlnaConfigFileTest.cpp  EditAlarmFileTest.cpp  EditDlnaFileTest.cpp  EditFtpFileTest.cpp  EditMpdFileTest.cpp  EditScreenSaverFileTest.cpp  FtpConfigFileTest.cpp  MpdConfigFileTest.cpp  ScreenSaverConfigFileTest.cpp  UnitTests.pro  WifiFileConfigTest.cpp  editdlnafiletest.cpp  editftpfiletest.cpp  editmpdfiletest.cpp  editsambafiletest.cpp  editscreensavefiletest.cpp  editwififiletest.cpp  gtest_dependency.pri
UnitTests/Mock/: MockFileManager.h
(+55 files in other folders)
